@@ -4,7 +4,6 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -12,17 +11,21 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.io.Resource;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
 import com.cts.dto.RegistrarCourseResponseDTO;
-import com.cts.service.RegistrarAcademicService;
 import com.cts.service.StudentService;
 
 public class CourseControllerTest {
 
-    @Mock private RegistrarAcademicService academicService;
-    @Mock private StudentService studentService;
+    @Mock
+    private StudentService studentService;
 
     @InjectMocks
     private CourseController courseController;
@@ -33,14 +36,34 @@ public class CourseControllerTest {
     }
 
     @Test
-    void getAllCourses_noFilters_success() {
+    void getAllCourses_success() {
         RegistrarCourseResponseDTO course = RegistrarCourseResponseDTO.builder().courseId(10L).title("Java FSE").build();
-        when(academicService.getAllConfiguredCourses()).thenReturn(Arrays.asList(course));
+        Page<RegistrarCourseResponseDTO> page = new PageImpl<>(List.of(course));
 
-        ResponseEntity<List<RegistrarCourseResponseDTO>> response = courseController.getAllCourses(null, null);
+        when(studentService.filterCourses(any(), any(), any(Pageable.class))).thenReturn(page);
+
+        ResponseEntity<Page<RegistrarCourseResponseDTO>> response = courseController.getAllCourses("Java", null, 0, 10, "title,asc");
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
-        assertEquals("Java FSE", response.getBody().get(0).getTitle());
+        assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().getContent().size());
+        assertEquals("Java FSE", response.getBody().getContent().get(0).getTitle());
+    }
+
+    @Test
+    void getSyllabusInline_success() {
+        Resource mockResource = new ByteArrayResource("PDF".getBytes()) {
+            @Override
+            public String getFilename() {
+                return "syllabus.pdf";
+            }
+        };
+
+        when(studentService.getSyllabusResource(10L)).thenReturn(mockResource);
+
+        ResponseEntity<Resource> response = courseController.getSyllabusInline(10L);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
     }
 }
